--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "symfony/polyfill-php83": "^1.31",
         "lbuchs/webauthn": "^2.2",
         "mahocommerce/icons": "^1",
-        "symfony/mailer": "^7.2"
+        "symfony/mailer": "^7.2",
+        "symfony/polyfill-php84": "^1.31"
     },
     "replace": {
         "symfony/polyfill-ctype": "*",
