--- a/.github/workflows/copyright.yml
+++ b/.github/workflows/copyright.yml
@@ -53,7 +53,7 @@ jobs:
 
             # Only check files with specific extensions
             extension="${file##*.}"
-            if ! [[ "${extension,,}" =~ ^(css|js|php|phtml|template|xml)$ ]]; then
+            if ! [[ "${extension,,}" =~ ^(css|js|php|phtml)$ ]]; then
               continue
             fi
 
