--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-mbstring": "*",
         "symfony/polyfill-intl-grapheme": "*",
+        "symfony/polyfill-intl-idn": "*",
         "symfony/polyfill-intl-normalizer": "*",
         "symfony/polyfill-php80": "*",
         "symfony/polyfill-php81": "*",
