Migrated to libsodium

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "ext-session": "*",
         "ext-simplexml": "*",
         "ext-soap": "*",
+        "ext-sodium": "*",
         "ext-spl": "*",
         "ext-zlib": "*",
         "composer-runtime-api": "^2",
@@ -35,8 +36,6 @@
         "ezyang/htmlpurifier": "^4.17",
         "mahocommerce/maho-composer-plugin": "^3",
         "pelago/emogrifier": "^7.0",
-        "phpseclib/mcrypt_compat": "^2.0.3",
-        "phpseclib/phpseclib": "^3.0.14",
         "shardj/zf1-future": "^1.24.1",
         "symfony/console": "^7.1",
         "spomky-labs/otphp": "^11.3",
