--- a/.phpstan.dist.baseline.neon
+++ b/.phpstan.dist.baseline.neon
@@ -10579,6 +10579,12 @@ parameters:
 			path: app/code/core/Mage/Api2/Model/Resource.php
 
 		-
+			message: '#^Call to an undefined method Varien_Data_Collection_Db\:\:addAttributeToFilter\(\)\.$#'
+			identifier: method.notFound
+			count: 1
+			path: app/code/core/Mage/Api2/Model/Resource.php
+
+		-
 			message: '#^Method Mage_Api2_Model_Resource\:\:_create\(\) invoked with 1 parameter, 0 required\.$#'
 			identifier: arguments.count
 			count: 1
