--- a/.github/workflows/copyright.yml
+++ b/.github/workflows/copyright.yml
@@ -42,6 +42,11 @@ jobs:
           .phpcs.xml
           .php-cs-fixer.php
           .rector.php
+          .phpstorm.meta.php/blocks.meta.php
+          .phpstorm.meta.php/helpers.meta.php
+          .phpstorm.meta.php/models.meta.php
+          .phpstorm.meta.php/registry.meta.php
+          .phpstorm.meta.php/resource_models.meta.php
           "
 
           # Loop through each modified file
