--- a/composer.json
+++ b/composer.json
@@ -45,8 +45,7 @@
         "altcha-org/altcha": "^1.1.0",
         "mahocommerce/icons": "^1",
         "symfony/mailer": "^7.2",
-        "symfony/polyfill-php84": "^1.31",
-        "phpseclib/phpseclib": "^3.0"
+        "symfony/polyfill-php84": "^1.31"
     },
     "replace": {
         "paragonie/random_compat": "*",
