--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@
 *.vsix
 
 # Maho stuff
-/app/etc/local.xml
+/app/etc/local.xml*
+!/app/etc/local.xml.template
 
 /public/js/tinymce
 /public/media/*
