--- a/composer.json
+++ b/composer.json
@@ -70,8 +70,7 @@
         "colinmollenhour/magento-redis-session": "Redis support for PHP sessions",
         "fballiano/openmage-cssjs-minify":  "Minification support for CSS/JS",
         "fballiano/openmage-defer-javascripts":  "Move all javascripts to the end of all pages, preserving execution order",
-        "fballiano/openmage-cloudflare-turnstile": "Turnstile: Cloudflare captcha-like antispam solution",
-        "intervention/image-driver-vips": "Libvips driver for Maho image processing library, if your server supports libvips, this is highly suggested"
+        "fballiano/openmage-cloudflare-turnstile": "Turnstile: Cloudflare captcha-like antispam solution"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
