--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "altcha-org/altcha": "^1.1.0",
         "mahocommerce/icons": "^1",
         "symfony/mailer": "^7.2",
-        "symfony/polyfill-php84": "^1.31"
+        "symfony/polyfill-php84": "^1.31",
+        "intervention/image": "^3.11"
     },
     "replace": {
         "paragonie/random_compat": "*",
