--- a/.github/workflows/rector.yml
+++ b/.github/workflows/rector.yml
@@ -41,4 +41,4 @@ jobs:
         run: composer require rector/rector "^2" --dev
 
       - name: Rector
-        run: php vendor/bin/rector -c .rector.php process --dry-run
+        run: php vendor/bin/rector -c .rector.php --dry-run
