Migrated to cloudflare/wrangler-action

--- a/.github/workflows/phpdoc.yml
+++ b/.github/workflows/phpdoc.yml
@@ -28,10 +28,8 @@ jobs:
         run: phpdoc -c .github/phpdoc.xml
 
       - name: Publish to Cloudflare Pages
-        uses: cloudflare/pages-action@v1
+        uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: maho-phpdoc
-          directory: .github/phpdoc
-          wranglerVersion: '3'
+          command: pages deploy .github/phpdoc --project-name=maho-phpdoc
