--- a/composer.json
+++ b/composer.json
@@ -76,7 +76,8 @@
         "fballiano/openmage-cloudflare-turnstile": "Turnstile: Cloudflare captcha-like antispam solution"
     },
     "conflict": {
-        "colinmollenhour/cache-backend-redis": "*"
+        "colinmollenhour/cache-backend-redis": "*",
+        "colinmollenhour/magento-redis-session": "*"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
