--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "type": "maho-source",
     "require": {
-        "php": ">=8.2",
+        "php": ">=8.3",
         "ext-ctype": "*",
         "ext-curl": "*",
         "ext-dom": "*",
@@ -40,7 +40,6 @@
         "symfony/console": "^7.1",
         "spomky-labs/otphp": "^11.3",
         "bacon/bacon-qr-code": "^3.0",
-        "symfony/polyfill-php83": "^1.31",
         "lbuchs/webauthn": "^2.2",
         "altcha-org/altcha": "^1.1.0",
         "mahocommerce/icons": "^1",
@@ -60,13 +59,15 @@
         "symfony/polyfill-intl-normalizer": "*",
         "symfony/polyfill-php80": "*",
         "symfony/polyfill-php81": "*",
-        "symfony/polyfill-php82": "*"
+        "symfony/polyfill-php82": "*",
+        "symfony/polyfill-php83": "*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3",
         "mahocommerce/maho-phpstan-plugin": "^3",
         "phpstan/phpstan": "^2.0",
-        "phpstan/phpstan-deprecation-rules": "^2.0"
+        "phpstan/phpstan-deprecation-rules": "^2.0",
+        "rector/rector": "^2"
     },
     "suggest": {
         "colinmollenhour/magento-redis-session": "Redis support for PHP sessions",
@@ -108,7 +109,7 @@
             "mahocommerce/maho-composer-plugin": true
         },
         "platform": {
-            "php": "8.2"
+            "php": "8.3"
         }
     }
 }
