--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         "symfony/mailer": "^7.2",
         "symfony/polyfill-php84": "^1.31",
         "intervention/image": "^3.11",
-        "symfony/cache": "^7.2"
+        "symfony/cache": "^7.2",
+        "symfony/var-dumper": "^7.3"
     },
     "replace": {
         "magento-hackathon/magento-composer-installer": "*",
