--- a/composer.json
+++ b/composer.json
@@ -78,7 +78,8 @@
     "suggest": {
         "fballiano/openmage-cssjs-minify": "Minification support for CSS/JS",
         "fballiano/openmage-defer-javascripts": "Move all javascripts to the end of all pages, preserving execution order",
-        "fballiano/openmage-cloudflare-turnstile": "Turnstile: Cloudflare captcha-like antispam solution"
+        "fballiano/openmage-cloudflare-turnstile": "Turnstile: Cloudflare captcha-like antispam solution",
+        "laminas/laminas-soap": "Install this package if you need SOAP web services functionality"
     },
     "conflict": {
         "colinmollenhour/cache-backend-redis": "*",
