--- a/composer.json
+++ b/composer.json
@@ -80,7 +80,8 @@
         "fballiano/openmage-defer-javascripts": "Move all javascripts to the end of all pages, preserving execution order",
         "fballiano/openmage-cloudflare-turnstile": "Turnstile: Cloudflare captcha-like antispam solution",
         "laminas/laminas-json-server": "Install this package if you need JSON-RPC web services functionality",
-        "laminas/laminas-soap": "Install this package if you need SOAP web services functionality"
+        "laminas/laminas-soap": "Install this package if you need SOAP web services functionality",
+        "laminas/laminas-xmlrpc": "Install this package if you need XML-RPC web services functionality"
     },
     "conflict": {
         "colinmollenhour/cache-backend-redis": "*",
