--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
         "symfony/http-foundation": "^7.3",
         "symfony/mailer": "^7.3",
         "symfony/polyfill-php84": "^1.31",
-        "symfony/var-dumper": "^7.3"
+        "symfony/var-dumper": "^7.3",
+        "symfony/http-client": "^7.3"
     },
     "replace": {
         "magento-hackathon/magento-composer-installer": "*",
