--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "spomky-labs/otphp": "^11.3",
         "symfony/cache": "^7.3",
         "symfony/console": "^7.3",
+        "symfony/http-client": "^7.3",
         "symfony/http-foundation": "^7.3",
         "symfony/mailer": "^7.3",
         "symfony/polyfill-php84": "^1.31",
