--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "ext-soap": "*",
         "ext-sodium": "*",
         "ext-spl": "*",
+        "ext-zip": "*",
         "ext-zlib": "*",
         "altcha-org/altcha": "^1.1.0",
         "bacon/bacon-qr-code": "^3.0",
