--- a/composer.json
+++ b/composer.json
@@ -34,17 +34,19 @@
         "ext-soap": "*",
         "ext-sodium": "*",
         "ext-spl": "*",
+        "ext-zip": "*",
         "ext-zlib": "*",
         "altcha-org/altcha": "^1.1.0",
         "bacon/bacon-qr-code": "^3.0",
         "composer-runtime-api": "^2",
         "cweagans/composer-patches": "^1.7",
+        "dompdf/dompdf": "^3.1",
         "ezyang/htmlpurifier": "^4.17",
         "intervention/image": "^3.11",
         "lbuchs/webauthn": "^2.2",
         "mahocommerce/icons": "^1",
         "mahocommerce/maho-composer-plugin": "^3",
-        "pelago/emogrifier": "^8",
+        "pelago/emogrifier": "^7",
         "shardj/zf1-future": "^1.24.1",
         "spomky-labs/otphp": "^11.3",
         "symfony/cache": "^7.3",
