--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,8 @@
         "symfony/http-foundation": "^7.3",
         "symfony/mailer": "^7.3",
         "symfony/polyfill-php84": "^1.31",
-        "symfony/var-dumper": "^7.3"
+        "symfony/var-dumper": "^7.3",
+        "matthiasmullie/minify": "^1.3"
     },
     "replace": {
         "magento-hackathon/magento-composer-installer": "*",
