--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,9 @@
         "lbuchs/webauthn": "^2.2",
         "mahocommerce/icons": "^1",
         "mahocommerce/maho-composer-plugin": "^3",
+        "matthiasmullie/minify": "^1.3",
         "pelago/emogrifier": "^7",
+        "php-units-of-measure/php-units-of-measure": "^2.2",
         "shardj/zf1-future": "^1.24.1",
         "spomky-labs/otphp": "^11.3",
         "symfony/cache": "^7.3",
@@ -55,8 +57,7 @@
         "symfony/http-foundation": "^7.3",
         "symfony/mailer": "^7.3",
         "symfony/polyfill-php84": "^1.31",
-        "symfony/var-dumper": "^7.3",
-        "matthiasmullie/minify": "^1.3"
+        "symfony/var-dumper": "^7.3"
     },
     "replace": {
         "magento-hackathon/magento-composer-installer": "*",
