--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "mahocommerce/icons": "^1",
         "mahocommerce/maho-composer-plugin": "^3",
         "matthiasmullie/minify": "^1.3",
+        "monolog/monolog": "^3.9",
         "pelago/emogrifier": "^7",
         "php-units-of-measure/php-units-of-measure": "^2.2",
         "shardj/zf1-future": "^1.24.1",
