Added `Speculation Rules API` module (#277)

--- a/.github/workflows/check-missing-translations.yml
+++ b/.github/workflows/check-missing-translations.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
@@ -32,7 +34,7 @@ jobs:
 
     - name: Check for missing translations
       run: |
-        output=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | ./maho translations:missing)
+        output=$(git diff --name-only ${{ github.event.pull_request.base.sha }}...${{ github.event.pull_request.head.sha }} | ./maho translations:missing)
 
         if [ -n "$output" ]; then
           echo "❌ Found missing translations in changed files:"
