--- a/composer.json
+++ b/composer.json
@@ -80,7 +80,8 @@
         "mahocommerce/maho-phpstan-plugin": "^3",
         "phpstan/phpstan": "^2.0",
         "phpstan/phpstan-deprecation-rules": "^2.0",
-        "rector/rector": "^2"
+        "rector/rector": "^2",
+        "pestphp/pest": "^3.8"
     },
     "suggest": {
         "fballiano/openmage-cssjs-minify": "Minification support for CSS/JS",
@@ -100,6 +101,11 @@
             "MahoCLI\\": "lib/MahoCLI"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
     "extra": {
         "patches": {
             "shardj/zf1-future": {
@@ -115,7 +121,8 @@
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "cweagans/composer-patches": true,
             "magento-hackathon/magento-composer-installer": false,
-            "mahocommerce/maho-composer-plugin": true
+            "mahocommerce/maho-composer-plugin": true,
+            "pestphp/pest-plugin": true
         },
         "platform": {
             "php": "8.3"
