--- a/.github/workflows/pest.yml
+++ b/.github/workflows/pest.yml
@@ -37,4 +37,4 @@ jobs:
         run: composer install --prefer-dist --no-progress --ignore-platform-req=ext-*
 
       - name: Run Pest Tests
-        run: ./vendor/bin/pest --verbose
+        run: ./vendor/bin/pest
