--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@
 /.phpstan.baseline.neon export-ignore
 /.phpstan.neon export-ignore
 /.rector.php export-ignore
+/tests export-ignore
 /phpunit.xml export-ignore
 /README.md export-ignore
 /SECURITY.md export-ignore
