--- a/.github/workflows/pest.yml
+++ b/.github/workflows/pest.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Test Maho Installation
         run: |
-          ./maho install --license_agreement_accepted yes --locale en_US --timezone Europe/London --default_currency EUR --db_host localhost --db_name maho --db_user root --db_pass root --url http://maho.test/ --secure_base_url http://maho.test/ --use_secure 0 --use_secure_admin 0 --admin_lastname admin --admin_firstname admin --admin_email admin@admin.com --admin_username admin --admin_password 123123123123123123 --sample_data=0 --force
+          ./maho install --license_agreement_accepted yes --locale en_US --timezone Europe/London --default_currency EUR --db_host localhost --db_name maho --db_user root --db_pass root --url http://maho.test/ --secure_base_url http://maho.test/ --use_secure 0 --use_secure_admin 0 --admin_lastname admin --admin_firstname admin --admin_email admin@admin.com --admin_username admin --admin_password 123123123123123123 --sample_data=0
           ./maho index:reindex:all
           ./maho cache:flush
 
