--- a/.github/workflows/pest.yml
+++ b/.github/workflows/pest.yml
@@ -22,7 +22,8 @@ jobs:
           MYSQL_ALLOW_EMPTY_PASSWORD: false
         ports:
           - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3 --default-authentication-plugin=mysql_native_password
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        command: --default-authentication-plugin=mysql_native_password
 
     steps:
       - name: Setup PHP
