--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,7 @@
         "symfony/mailer": "^7.3",
         "symfony/polyfill-php84": "^1.31",
         "symfony/polyfill-php85": "^1.32",
+        "symfony/validator": "^7.3",
         "symfony/var-dumper": "^7.3"
     },
     "replace": {
@@ -85,7 +86,6 @@
         "psy/psysh": "^0.12.10"
     },
     "suggest": {
-        "fballiano/openmage-cssjs-minify": "Minification support for CSS/JS",
         "fballiano/openmage-cloudflare-turnstile": "Turnstile: Cloudflare captcha-like antispam solution",
         "laminas/laminas-json-server": "Install this package if you need JSON-RPC web services functionality",
         "laminas/laminas-soap": "Install this package if you need SOAP web services functionality",
@@ -110,10 +110,9 @@
     "extra": {
         "patches": {
             "shardj/zf1-future": {
-                "MAG-1.9.3.0": "https://raw.githubusercontent.com/MahoCommerce/maho-composer-patches/c0a65fb380c98ae1e0618014d1bbe4e56fa39e01/MAG-1.9.3.0.patch",
-                "MAG-1.9.3.7 - SUPEE-10415": "https://raw.githubusercontent.com/MahoCommerce/maho-composer-patches/e75f155864138ef4ee2b18a82797d6f40d71ad51/MAG-1.9.3.7.patch",
-                "OM-1081 - Not detecting HTTPS behind a proxy": "https://raw.githubusercontent.com/MahoCommerce/maho-composer-patches/e75f155864138ef4ee2b18a82797d6f40d71ad51/OM-1081.patch",
-                "OM-2047 - Pass delimiter char to preg_quote": "https://raw.githubusercontent.com/MahoCommerce/maho-composer-patches/e75f155864138ef4ee2b18a82797d6f40d71ad51/OM-2047.patch"
+                "MAG-1.9.3.7 - SUPEE-10415": "https://raw.githubusercontent.com/MahoCommerce/maho-composer-patches/cff368fa23f790288f6913ffae20120b6fec45db/MAG-1.9.3.7.patch",
+                "OM-1081 - Not detecting HTTPS behind a proxy": "https://raw.githubusercontent.com/MahoCommerce/maho-composer-patches/cff368fa23f790288f6913ffae20120b6fec45db/OM-1081.patch",
+                "OM-2047 - Pass delimiter char to preg_quote": "https://raw.githubusercontent.com/MahoCommerce/maho-composer-patches/cff368fa23f790288f6913ffae20120b6fec45db/OM-2047.patch"
             }
         }
     },
