--- a/.phpstan.dist.baseline.neon
+++ b/.phpstan.dist.baseline.neon
@@ -26041,49 +26041,49 @@ parameters:
 			rawMessage: 'Method Maho\Object\Cache::debug() has parameter $idx with no type specified.'
 			identifier: missingType.parameter
 			count: 1
-			path: lib/Maho/Object/Cache.php
+			path: lib/Maho/DataObject/Cache.php
 
 		-
 			rawMessage: 'Method Maho\Object\Cache::debug() has parameter $object with no type specified.'
 			identifier: missingType.parameter
 			count: 1
-			path: lib/Maho/Object/Cache.php
+			path: lib/Maho/DataObject/Cache.php
 
 		-
 			rawMessage: 'Method Maho\Object\Cache::deleteByTags() has no return type specified.'
 			identifier: missingType.return
 			count: 1
-			path: lib/Maho/Object/Cache.php
+			path: lib/Maho/DataObject/Cache.php
 
 		-
 			rawMessage: 'Method Maho\Object\Cache::findByClass() has no return type specified.'
 			identifier: missingType.return
 			count: 1
-			path: lib/Maho/Object/Cache.php
+			path: lib/Maho/DataObject/Cache.php
 
 		-
 			rawMessage: 'Method Maho\Object\Cache::findByHash() has no return type specified.'
 			identifier: missingType.return
 			count: 1
-			path: lib/Maho/Object/Cache.php
+			path: lib/Maho/DataObject/Cache.php
 
 		-
 			rawMessage: 'Method Maho\Object\Cache::findByHash() has parameter $hash with no type specified.'
 			identifier: missingType.parameter
 			count: 1
-			path: lib/Maho/Object/Cache.php
+			path: lib/Maho/DataObject/Cache.php
 
 		-
 			rawMessage: 'Method Maho\Object\Cache::findByIds() has no return type specified.'
 			identifier: missingType.return
 			count: 1
-			path: lib/Maho/Object/Cache.php
+			path: lib/Maho/DataObject/Cache.php
 
 		-
 			rawMessage: 'Method Maho\Object\Cache::findByIds() has parameter $ids with no type specified.'
 			identifier: missingType.parameter
 			count: 1
-			path: lib/Maho/Object/Cache.php
+			path: lib/Maho/DataObject/Cache.php
 
 		-
 			rawMessage: 'Method Maho\Profiler::fetch() has no return type specified.'
