--- a/composer.json
+++ b/composer.json
@@ -89,7 +89,9 @@
         "fballiano/openmage-cloudflare-turnstile": "Turnstile: Cloudflare captcha-like antispam solution",
         "laminas/laminas-json-server": "Install this package if you need JSON-RPC web services functionality",
         "laminas/laminas-soap": "Install this package if you need SOAP web services functionality",
-        "laminas/laminas-xmlrpc": "Install this package if you need XML-RPC web services functionality"
+        "laminas/laminas-xmlrpc": "Install this package if you need XML-RPC web services functionality",
+        "open-telemetry/sdk": "OpenTelemetry SDK for distributed tracing and observability",
+        "open-telemetry/exporter-otlp": "OTLP exporter for OpenTelemetry (required for sending traces to collectors)"
     },
     "conflict": {
         "colinmollenhour/cache-backend-redis": "*",
