--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "composer-runtime-api": "^2",
         "doctrine/dbal": "^4.0",
         "dompdf/dompdf": "^3.1",
+        "donatj/phpuseragentparser": "^1.11",
         "ezyang/htmlpurifier": "^4.17",
         "intervention/image": "^3.11",
         "laminas/laminas-permissions-acl": "^2.17",
