--- a/composer.json
+++ b/composer.json
@@ -39,9 +39,9 @@
         "altcha-org/altcha": "^1.1.0",
         "bacon/bacon-qr-code": "^3.0",
         "composer-runtime-api": "^2",
+        "cbschuld/browser.php": "^2.0",
         "doctrine/dbal": "^4.0",
         "dompdf/dompdf": "^3.1",
-        "donatj/phpuseragentparser": "^1.11",
         "ezyang/htmlpurifier": "^4.17",
         "intervention/image": "^3.11",
         "laminas/laminas-permissions-acl": "^2.17",
