--- a/.github/workflows/pest.yml
+++ b/.github/workflows/pest.yml
@@ -10,24 +10,53 @@ on:
 
 jobs:
   pest:
-    name: Test Suite
+    name: Test Suite (${{ matrix.db_engine }})
     runs-on: [ubuntu-latest]
+
+    strategy:
+      fail-fast: false
+      matrix:
+        db_engine: [mysql, pgsql]
+        include:
+          - db_engine: mysql
+            db_image: mysql:latest
+            db_port: 3306
+            db_user: root
+            db_pass: root
+            php_extensions: ""
+          - db_engine: pgsql
+            db_image: postgres:16
+            db_port: 5432
+            db_user: postgres
+            db_pass: postgres
+            php_extensions: pdo_pgsql
 
     services:
       mysql:
-        image: mysql:latest
+        image: ${{ matrix.db_engine == 'mysql' && 'mysql:latest' || '' }}
         env:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: maho
         ports:
           - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: ${{ matrix.db_engine == 'mysql' && '--health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3' || '' }}
+
+      postgres:
+        image: ${{ matrix.db_engine == 'pgsql' && 'postgres:16' || '' }}
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: maho
+        ports:
+          - 5432:5432
+        options: ${{ matrix.db_engine == 'pgsql' && '--health-cmd="pg_isready" --health-interval=10s --health-timeout=5s --health-retries=5' || '' }}
 
     steps:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: 8.3
+          extensions: ${{ matrix.php_extensions }}
 
       - name: Checkout code
         uses: actions/checkout@v6
@@ -48,7 +77,26 @@ jobs:
 
       - name: Install Maho
         run: |
-          ./maho install --license_agreement_accepted yes --locale en_US --timezone Europe/London --default_currency USD --db_host 127.0.0.1 --db_name maho --db_user root --db_pass root --url http://maho.test/ --secure_base_url http://maho.test/ --use_secure 0 --use_secure_admin 0 --admin_lastname admin --admin_firstname admin --admin_email admin@admin.com --admin_username admin --admin_password asdasdasd123123123 --sample_data=1
+          ./maho install \
+            --license_agreement_accepted yes \
+            --locale en_US \
+            --timezone Europe/London \
+            --default_currency USD \
+            --db_host 127.0.0.1 \
+            --db_name maho \
+            --db_user ${{ matrix.db_user }} \
+            --db_pass ${{ matrix.db_pass }} \
+            --db_engine ${{ matrix.db_engine }} \
+            --url http://maho.test/ \
+            --secure_base_url http://maho.test/ \
+            --use_secure 0 \
+            --use_secure_admin 0 \
+            --admin_lastname admin \
+            --admin_firstname admin \
+            --admin_email admin@admin.com \
+            --admin_username admin \
+            --admin_password asdasdasd123123123 \
+            ${{ matrix.db_engine == 'mysql' && '--sample_data=1' || '' }}
           ./maho index:reindex:all
           ./maho cache:flush
 
