--- a/app/etc/local.xml.template
+++ b/app/etc/local.xml.template
@@ -29,7 +29,7 @@
                     <password>{{db_pass}}</password>
                     <dbname>{{db_name}}</dbname>
                     <initStatements>{{db_init_statemants}}</initStatements>
-                    <model>{{db_model}}</model>
+                    <model>{{db_engine}}</model>
                     <type>{{db_type}}</type>
                     <pdoType>{{db_pdo_type}}</pdoType>
                     <active>1</active>
